src/Components/Portfolio/Portfolio.css
.background {
  background-color: #222831;
}

.fancyName {
  text-shadow: 5px 5px #636971;
  ;
}

.mainHeadings {
  color: #00adb5;
  font-size: 10vh;
  font-family: sans-serif;
}

.smallerHeadings {
  color: #eeeeee;
  font-size: 6vh;
  font-family: sans-serif;
}

.paragraphs {
  color: #777777;
  font-size: 2vh;
  font-family: sans-serif;
}

.button {
  background-color: #393e46;
  color: #00adb5;
  border-color: #eeeeee;
}

.button:hover {
  scale: 1.05;
}

.mainImg {
  width: 50%;
  border: #00adb5;
  border-style: solid;
  border-radius: 20%;
  border-color: #00adb5;
}

.commentary {
  color: #00adb5;
  font-size: 2vh;
  font-family: sans-serif;
}

.component {
  background-color: #777777;
}

.projectImg {
  width: 90%;
  border: #00adb5;
  border-style: solid;
  border-radius: 20%;
  border-color: #00adb5;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.projectHeadings {
  color: #00adb5;
  font-size: 3em;
  font-family: sans-serif;
}

.smallerProjectHeadings {
  color: #eeeeee;
  font-size: 2em;
  font-family: sans-serif;
}

.projectParagraphs {
  color: #777777;
  font-size: 2vh;
  font-family: sans-serif;
}

.tabButton {
  border-style: solid;
  border-color: #00adb5;
  border-radius: 5%;
}

.tab {
  color: #00adb5
}

.scrollLink {
  color: #00adb5;
  font-size: 1vw 1vh;
  padding: 1vw;
}

.scrollLink:hover {
  color: #777777;
  text-decoration: underline;
  scale: 1.025;
}

::-webkit-scrollbar {
  background-color: #222831;
  width: 10px;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 15px #333333;
  border-radius: 25px;
}

::-webkit-scrollbar-thumb {
  border-radius: 25px;
  -webkit-box-shadow: inset 0 0 15px #00adb5;
}

.topButton {
  color: #00adb5;
  background-color: #777777;
  /* float: right; */
  position: fixed;
  bottom: 5%;
  left: 93%;
  border-radius: 40%;
  cursor: pointer;
  text-align: center;
  box-shadow: 2px 2px 5px #00adb5;
}

.topButton:hover {
  scale: 1.1;
}

a {
  color: #00adb5;
}

a:hover {
  color: #777777;
  cursor: pointer;
}

.sideBar {
  position: fixed;
  bottom: 0%;
  left: 0.5%;
}

.icon {
  margin-bottom: 2vh;
  opacity: 0.3;
  color: #777777;
}

.icon:hover {
  scale: 1.3;
  color: #00adb5;
  opacity: 1;
  cursor: pointer;
}




h1 {
  color: #00adb5;
  font-size: 10vh;
  font-family: sans-serif;
}

h2 {
  color: #eeeeee;
  font-size: 6vh;
  font-family: sans-serif;
}

p {
  color: #393e46;
  font-size: 2vh;
  font-family: sans-serif;
}

.backgroundtest {
  background-color: #022e66;
}

.h1test {
  color: #c2c3c5;
}

.h2test {
  color: #96785b;
}

.ptest {
  color: #d1ab7d;
}

.backgroundtest2 {
  background-color: #eaffd0;
}

.h1test2 {
  color: #95e1d3
}

.h2test2 {
  color: #f38181;
}

.ptest2 {
  color: #fce38a;
}

